--- a/css/cssAccueil.css
+++ b/css/cssAccueil.css
@@ -11,7 +11,7 @@
 #h1Fonctionnalite2,
 #h1Fonctionnalite3,
 #h1Fonctionnalite4 {
-  color: #22222 22;
+  color: #222222 ;
   margin-bottom: 3%;
   font-weight: bold;
 }
@@ -35,7 +35,7 @@
 }
 #divPresentation #aGooglePlay,
 #divPresentation #aNox {
-  background-color: #22222 22;
+  background-color: #222222;
 }
 #divFonctionnalite1,
 #divFonctionnalite2,
