--- a/css/cssAccueil.less
+++ b/css/cssAccueil.less
@@ -1,12 +1,14 @@
+/*Modifié par Babacar et Jade*/
+
 @colorDiv : #f2f2f2;
 @colorBody : #2F3F4F;
-@colorOrange : #22222;
+@colorOrange : #222222;
 
 #divTel {
   float: right;
+  padding:0;
   #imgTel {
-    position: fixed;
-    float: right;
+    float: left;
     padding:0;
   }
 }
@@ -59,10 +61,16 @@
 #pFonctionnalite1, #pFonctionnalite3 {
   position: relative;
   float: right;
-  text-align: justify;
+  /*text-align: justify;*/
+  font-size: 1.5em;
 }
 #pFonctionnalite2, #pFonctionnalite4 {
   position: relative;
   float: left;
   text-align: justify;
+  font-size: 1.5em;
+}
+
+#description {
+  font-weight: bold;
 }
