--- a/css/nav.css
+++ b/css/nav.css
@@ -10,13 +10,24 @@
          
       
        }
+       #avatar{
+        height:50px;
+        width:50px;
+        border-radius: 50%;
+        margin-top: -5%;
+    }
 }
 
 @media only screen and (min-width:0px) and (max-width:460px) {
     #bandeau{
       height: 55%;
     }
- 
+    #logo{
+        width: 70px;
+        position: absolute;
+        z-index:1;
+        
+      }
     
     }
     @media only screen and (min-width:0px) and (max-width:767px) {
@@ -24,12 +35,13 @@
             max-height: 500px;
         }
      #icon{
-       float:right
-      
+       float:right;
+       display:none;
      } 
      #icon1{
        float:right;
        margin-left: 90%;
+       display:none;
      
      }
     
@@ -49,18 +61,25 @@
      }
      #admin{
         float:right ; 
-        padding-top: 0px;
+        padding-top: 8px;
         padding-left: 100%;
-        
+        padding-right: 10px;
          
       
        }
      #logo{
-       width: 100px;
+       width: 70px;
        position: absolute;
        z-index:1;
        
      }
+     #avatar{
+        height:40px;
+        width:40px;
+        border-radius: 50%;
+        /* margin-top: -5%; */
+        float:right
+    }
     }
     html, body {
         height: 100%;
@@ -111,9 +130,9 @@
       }  
 
 
-#avatar{
+/* #avatar{
     height:50px;
     width:50px;
     border-radius: 50%;
     margin-top: -10%;
-}
+} */
